absDiff and divideAndRemainder benchmarks.